OO-658: fix an CSS issue where the open/close link is hidden by the select link, enable to close menu item in the admin tab

--- a/src/main/webapp/static/themes/openolat/all/modules/_nav.scss
+++ b/src/main/webapp/static/themes/openolat/all/modules/_nav.scss
@@ -157,6 +157,13 @@ div.b_tree {
 				left: 0px;
 				z-index: 9;
 			}
+			
+			.b_tree_level_open.b_tree_oc_l1 {
+				z-index: 10;
+			}
+			.b_tree_level_close.b_tree_oc_l1 {
+				z-index: 10;
+			}
 
 
 			/* selected, hovered, active <a> tag */
